--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -436,6 +436,7 @@ plot_summary_current_data(
   parameter = "amplitude",
   include_representative_trace = "yes",
   representative_trace_filename = "test.png",
+  y_axis_limit = 175,
   signif_stars = "yes",
   t_test_df = sample_eEPSC_t_test_df,
   hormone_added = "Insulin",
