Modified add_new_cells() function to have interactive warning message, and include AP data. Imported utils::menu

--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -148,7 +148,7 @@ first_time_df <- add_new_cells(
   new_raw_data_csv = import_ext_data("sample_new_eEPSC_data.csv"),
   cell_characteristics_csv = import_ext_data("sample_cell_characteristics.csv"),
   old_raw_data_csv = import_ext_data("empty_eEPSC_sheet.csv"),
-  current_type = "eEPSC",
+  data_type = "eEPSC",
   write_new_csv = "no",
   new_file_name = "",
   decimal_places = 2
